# lameh-qa

./: .gitignore  AGENT.md  QA-SCOPE.md  README.md  pyproject.toml
tests/integration/: sector_analysis_ratios.py
