[project]
name = "lameh-qa"
version = "0.1.0"
description = ""
authors = [
    {name = "miled",email = "milled@lameh.ai"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl (>=3.1.5,<4.0.0)",
    "pywin32 (>=312,<313) ; sys_platform == \"win32\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "poethepoet (>=0.48.0,<0.49.0)"
]

[tool.poe.tasks]
ratios = "python tests/integration/sector_analysis_ratios.py"